app/globals.css
@import "tailwindcss";

html {
  scroll-behavior: smooth;
}

body {
  @apply bg-white text-gray-900;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  @apply font-bold;
}

/* Remove number input spinners */
input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
}

/* Hide scrollbar while keeping scroll functionality */
.hide-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.hide-scrollbar::-webkit-scrollbar {
  display: none;
}

